--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,4 +1,4 @@
-<div class="login-body-bg">
+<!-- <div class="login-body-bg">
 	<div class="login-container">
 		<form class="form-signin">
 			<h2 class="form-signin-heading">Login</h2>
@@ -21,4 +21,34 @@
 			</div>
 		</form>
 	</div>
+</div> -->
+<!-- New Page - Login -->
+<div class="login-page">
+  <div class="form">
+    <form class="register-form">
+      <input type="text" placeholder="name"/>
+      <input type="password" placeholder="password"/>
+      <input type="text" placeholder="email address"/>
+      <button>create</button>
+      <p class="message">Already registered? <a href="#">Sign In</a></p>
+    </form>
+    <form class="login-form">
+      <h2 class="heading">Login</h2>
+      <div class="form-group input-group">
+				<input type="text" class="form-control" id="username" name="username" placeholder="Username" ng-model="user.name" required>
+				<span class="input-group-addon">
+					<i class="glyphicon glyphicon-user"></i>
+				</span>
+			</div>
+      <div class="form-group input-group">
+				<input type="password" class="form-control" id="password" name="password" placeholder="Password" ng-model="user.password" required>
+				<span class="input-group-addon">
+					<i class="glyphicon glyphicon-lock"></i>
+				</span>
+			</div>
+      <button class="btn btn-lg btn-primary" type="button" ng-click="loginUser(user)">Sign In</button>
+      <p class="message">Not registered? <a href="#">Create an account</a></p>
+      <toaster-container></toaster-container>
+    </form>
+  </div>
 </div>
