--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,7 +84,6 @@
 }*/
 
 
-
 /***   New Login Page Styles   **/
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
@@ -100,6 +99,7 @@
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
+  padding-bottom: 70px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
