--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -184,3 +184,34 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.container-row-div {
+	background-color: lavender;
+	height: 100px;
+    width: 176px;
+	border: 1px solid grey;
+    border-radius: 6px;
+    position: relative;
+	margin-right: 5px;
+}
+
+.user-name {
+	float: left;
+    margin-left: 80px;
+    margin-top: 14px;
+}
+
+
+.user-email {
+	float: left;
+    margin-left: 80px;
+    margin-top: 10px;
+}
+
+.img-position {
+	position: absolute;
+    height: 75px;
+    width: 75px;
+	margin-top: 12px;
+}
+
