--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -206,6 +206,11 @@ body{
 	float: left;
     margin-left: 80px;
     margin-top: 10px;
+	white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    max-width: 50%;
 }
 
 .img-position {
